--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-  <p> <a href="Manish_resume.pdf">  Click here to download certificate</a></p> 
+  <style>
+  p {text-align: center;}
+    </style>
+  <p > <a href="Manish_resume.pdf">  Click here to download certificate</a></p> 
 </html>
